[package]
name = "repo-declutter"
version = "1.0.0"
description = "Reclaim disk space by clearing regenerable build and cache folders from your code repos"
authors = ["EERIE"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
arboard = "3"
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
